--- a/some_stuff.ipynb
+++ b/some_stuff.ipynb
@@ -227,123 +227,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mouse_id</th>\n",
-       "      <th>drug_regimen</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age_months</th>\n",
-       "      <th>weight_(g)</th>\n",
-       "      <th>timepoint</th>\n",
-       "      <th>tumor_volume_(mm3)</th>\n",
-       "      <th>metastatic_sites</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>5</td>\n",
-       "      <td>38.825898</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>10</td>\n",
-       "      <td>35.014271</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>34.223992</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20</td>\n",
-       "      <td>32.997729</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  mouse_id drug_regimen   sex  age_months  weight_(g)  timepoint  \\\n",
-       "0     k403     Ramicane  Male          21          16          0   \n",
-       "1     k403     Ramicane  Male          21          16          5   \n",
-       "2     k403     Ramicane  Male          21          16         10   \n",
-       "3     k403     Ramicane  Male          21          16         15   \n",
-       "4     k403     Ramicane  Male          21          16         20   \n",
-       "\n",
-       "   tumor_volume_(mm3)  metastatic_sites  \n",
-       "0           45.000000                 0  \n",
-       "1           38.825898                 0  \n",
-       "2           35.014271                 1  \n",
-       "3           34.223992                 1  \n",
-       "4           32.997729                 1  "
+       "mouse_id              1893\n",
+       "drug_regimen          1893\n",
+       "sex                   1893\n",
+       "age_months            1893\n",
+       "weight_(g)            1893\n",
+       "timepoint             1893\n",
+       "tumor_volume_(mm3)    1893\n",
+       "metastatic_sites      1893\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " master_df.head()"
+    " master_df.count()"
    ]
   },
   {
@@ -432,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,123 +349,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mouse_id</th>\n",
-       "      <th>drug_regimen</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age_months</th>\n",
-       "      <th>weight_(g)</th>\n",
-       "      <th>timepoint</th>\n",
-       "      <th>tumor_volume_(mm3)</th>\n",
-       "      <th>metastatic_sites</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>5</td>\n",
-       "      <td>38.825898</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>10</td>\n",
-       "      <td>35.014271</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>34.223992</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20</td>\n",
-       "      <td>32.997729</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  mouse_id drug_regimen   sex  age_months  weight_(g)  timepoint  \\\n",
-       "0     k403     Ramicane  Male          21          16          0   \n",
-       "1     k403     Ramicane  Male          21          16          5   \n",
-       "2     k403     Ramicane  Male          21          16         10   \n",
-       "3     k403     Ramicane  Male          21          16         15   \n",
-       "4     k403     Ramicane  Male          21          16         20   \n",
-       "\n",
-       "   tumor_volume_(mm3)  metastatic_sites  \n",
-       "0           45.000000                 0  \n",
-       "1           38.825898                 0  \n",
-       "2           35.014271                 1  \n",
-       "3           34.223992                 1  \n",
-       "4           32.997729                 1  "
+       "mouse_id              1880\n",
+       "drug_regimen          1880\n",
+       "sex                   1880\n",
+       "age_months            1880\n",
+       "weight_(g)            1880\n",
+       "timepoint             1880\n",
+       "tumor_volume_(mm3)    1880\n",
+       "metastatic_sites      1880\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_df.head()"
+    "clean_df.count()"
    ]
   },
   {
@@ -584,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +568,7 @@
        "Zoniferol                 6.966589              0.516398  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
