--- a/Matplotlib_HW_Challenge.ipynb
+++ b/Matplotlib_HW_Challenge.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 462,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "249"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 463,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "'g989'"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 471,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "[1644 rows x 8 columns]"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 470,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,211 +485,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mouse ID</th>\n",
-       "      <th>Drug Regimen</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age_months</th>\n",
-       "      <th>Weight (g)</th>\n",
-       "      <th>Timepoint</th>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
-       "      <th>Metastatic Sites</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>k403</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>16</td>\n",
-       "      <td>45</td>\n",
-       "      <td>22.050126</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>s185</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>3</td>\n",
-       "      <td>17</td>\n",
-       "      <td>45</td>\n",
-       "      <td>23.343598</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>x401</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28.484033</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>m601</td>\n",
-       "      <td>Capomulin</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>22</td>\n",
-       "      <td>17</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28.430964</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>g791</td>\n",
-       "      <td>Ramicane</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>11</td>\n",
-       "      <td>16</td>\n",
-       "      <td>45</td>\n",
-       "      <td>29.128472</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1859</th>\n",
-       "      <td>z314</td>\n",
-       "      <td>Stelasyn</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>21</td>\n",
-       "      <td>28</td>\n",
-       "      <td>5</td>\n",
-       "      <td>45.934712</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1862</th>\n",
-       "      <td>z435</td>\n",
-       "      <td>Propriva</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>12</td>\n",
-       "      <td>26</td>\n",
-       "      <td>10</td>\n",
-       "      <td>48.710661</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1872</th>\n",
-       "      <td>z581</td>\n",
-       "      <td>Infubinol</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>24</td>\n",
-       "      <td>25</td>\n",
-       "      <td>45</td>\n",
-       "      <td>62.754451</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1882</th>\n",
-       "      <td>z795</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>13</td>\n",
-       "      <td>29</td>\n",
-       "      <td>45</td>\n",
-       "      <td>65.741070</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1892</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>45</td>\n",
-       "      <td>73.867845</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>248 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "9        k403     Ramicane    Male          21          16         45   \n",
-       "19       s185    Capomulin  Female           3          17         45   \n",
-       "29       x401    Capomulin  Female          16          15         45   \n",
-       "39       m601    Capomulin    Male          22          17         45   \n",
-       "49       g791     Ramicane    Male          11          16         45   \n",
-       "...       ...          ...     ...         ...         ...        ...   \n",
-       "1859     z314     Stelasyn  Female          21          28          5   \n",
-       "1862     z435     Propriva  Female          12          26         10   \n",
-       "1872     z581    Infubinol  Female          24          25         45   \n",
-       "1882     z795     Naftisol  Female          13          29         45   \n",
-       "1892     z969     Naftisol    Male           9          30         45   \n",
-       "\n",
-       "      Tumor Volume (mm3)  Metastatic Sites  \n",
-       "9              22.050126                 1  \n",
-       "19             23.343598                 1  \n",
-       "29             28.484033                 0  \n",
-       "39             28.430964                 1  \n",
-       "49             29.128472                 1  \n",
-       "...                  ...               ...  \n",
-       "1859           45.934712                 0  \n",
-       "1862           48.710661                 0  \n",
-       "1872           62.754451                 3  \n",
-       "1882           65.741070                 3  \n",
-       "1892           73.867845                 4  \n",
-       "\n",
-       "[248 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 354,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"['g989'] not found in axis\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-474-91fbd8c73593>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Create a clean DataFrame by dropping the duplicate mouse by its ID.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mclean_mice\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstudy_mice\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop_duplicates\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Mouse ID'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkeep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'last'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mclean_mice\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclean_mice\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproblem_mouse\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mclean_mice\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   3995\u001b[0m             \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3996\u001b[0m             \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3997\u001b[1;33m             \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3998\u001b[0m         )\n\u001b[0;32m   3999\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   3934\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3935\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3936\u001b[1;33m                 \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3937\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3938\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[1;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[0;32m   3968\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3969\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3970\u001b[1;33m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3971\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3972\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   5016\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5017\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m\"ignore\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5018\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{labels[mask]} not found in axis\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5019\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5020\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['g989'] not found in axis\""
+     ]
     }
    ],
    "source": [
     "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
-    "clean_mice = clean_mice.drop_duplicates(subset=['Mouse ID'], keep='last')\n",
+    "clean_mice = study_mice.drop_duplicates(subset=['Mouse ID'], keep='last')\n",
+    "clean_mice = clean_mice.drop(problem_mouse[0])\n",
     "clean_mice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +530,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 467,
      "metadata": {},
      "output_type": "execute_result"
     }
